@@ -14,7 +14,7 @@
 #import <simtoolsgui.h> // GUIComposite
 #import <gui.h> // GraphElement
 
-@protocol Averager <MessageProbe>
+@protocol Averager <MessageProbe, CREATABLE>
 //S: Averages together data, gives the data to whomever asks.
 
 //D: Averager objects read a value (via a MessageProbe) from a
@@ -47,7 +47,7 @@ USING
 - (unsigned)getCount;
 @end
 
-@protocol Entropy <MessageProbe>
+@protocol Entropy <MessageProbe, CREATABLE>
 //S: Computes entropy via a MessageProbe.
 
 //D: Entropy objects read probabilities (via a MessageProbe) from a
@@ -72,7 +72,7 @@ USING
 - (double)getEntropy;
 @end
 
-@protocol EZBin <GUIComposite>
+@protocol EZBin <GUIComposite, CREATABLE>
 //S: An easy to use histogram interface.
 
 //D: This class allows the user to easily histogram data generated by a
@@ -210,7 +210,7 @@ USING
 - (const char *)getFileName;
 @end
 
-@protocol EZDistribution <EZBin>
+@protocol EZDistribution <EZBin, CREATABLE>
 //S: An EZBin that treats data as a distribution.
 
 //D: This is a subclass of EZBin which normalizes the data and treats
@@ -245,7 +245,7 @@ USING
 - (double)getEntropy;
 @end
 
-@protocol EZGraph <GUIComposite>
+@protocol EZGraph <GUIComposite, CREATABLE>
 //S: A class for easily create graphs.
 
 //D: This class allows the user to easily create graphs of various
@@ -387,7 +387,7 @@ USING
 
 @end
 
-@protocol ActiveGraph <MessageProbe>
+@protocol ActiveGraph <MessageProbe, CREATABLE>
 //S: Provides a continuous data feed between Swarm and the GUI.
 
 //D: An active graph object is the glue between a MessageProbe (for reading
@@ -409,7 +409,7 @@ USING
 - step;
 @end
 
-@protocol ActiveOutFile <MessageProbe>
+@protocol ActiveOutFile <MessageProbe, CREATABLE>
 //S: An object that actively updates its file stream when updated.
 
 //D: This is the file I/O equivalent of ActiveGraph: it takes an OutFile 
@@ -428,7 +428,7 @@ USING
 - step;
 @end
 
-@protocol FunctionGraph
+@protocol FunctionGraph <SwarmObject, CREATABLE>
 //S: A widget for drawing a function over a range of one variable.
  
 //D: The FunctionGraph class is like the ActiveGraph except that instead of
